# maskrcnn-benchmark

./: .gitignore  setup.py
demo/: demo_onnx_export.ipynb  export_to_onnx.py  mask_rcnn.py  onnx_model_test.py  test.py  trace_model_example.py  transform.py  unit_test.py  unittest.py  utils.py
demo/onnx/: utils.py
demo/onnx/test/: __init__.py  backbone.py  rpn.py
demo/unittest/: onnx_export_test.py  torchscript_trace_test.py
demo/unittest/onnx/export/: __init__.py  anchor_generator.py  backbone.py  feature_extractor.py  onnx_export_test.py  roi.py  roi_box_head.py  roi_box_predictor.py  rpn.py  rpn_head.py  rpn_post_processor.py
maskrcnn_benchmark/: _custom_ops.py
maskrcnn_benchmark/csrc/custom_ops/: CMakeLists.txt  custom_ops.cpp
maskrcnn_benchmark/layers/: nms.py  roi_align.py
maskrcnn_benchmark/modeling/: box_coder.py  poolers.py
maskrcnn_benchmark/modeling/rpn/: anchor_generator.py
maskrcnn_benchmark/structures/: bounding_box.py  boxlist_ops.py
